Import of JCDUQUE/Digest-SHA2-1.1.0 from CPAN.
gitpan-cpan-distribution: Digest-SHA2
gitpan-cpan-version:      1.1.0
gitpan-cpan-path:         JCDUQUE/Digest-SHA2-1.1.0.tar.gz
gitpan-cpan-author:       JCDUQUE
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -24,6 +24,16 @@ To run the binary, type:
 
         ./a.out
 
+CAVEAT!!!
+
+If you are using a C compiler that does not support 64-bit operations,
+i.e., does not understand "long long" types, please comment out the
+line
+
+    'DEFINE' => '-DSHA2_USE_INTTYPES_H',
+
+in the Makefile.PL.
+
 COPYRIGHT AND LICENSE
 
 Copyright (C) 2003 Julius C. Duque. Please read contact.html that comes
