Import of AVAR/Digest-SHA2-1.1.1 from CPAN.
gitpan-cpan-distribution: Digest-SHA2
gitpan-cpan-version:      1.1.1
gitpan-cpan-path:         AVAR/Digest-SHA2-1.1.1.tar.gz
gitpan-cpan-author:       AVAR
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+1.1.1    2007 July 7
+         - Added a note in the pod that this module is deprecated in favor
+           of Digest::SHA
+
 1.1.0    2003 December 5
          - tweaked test scripts
          - added more examples
